# webbuddy

./: .env  .gitignore  CLAUDE.md  GEMINI.md  LATEST_ERROR.md  README.md  REFACTOR_PLAN.md  backend.rar  docker-compose.yml
.claude/: settings.local.json
.codex/: AGENTS.frontend.md  AGENTS.md  backup.md
.cursor/: mcp.json
.cursor/rules/: clean-code.instructions.md  tailwindCSS.instruction.md
.github/: copilot-instructions.md  py-312-fastapi.prompt.md  svelte-proj-structure.instructions.md
.github/instructions/: clean-code.instructions.md  frontend-mindset.instructions.md  frontend-mindset.intructions.md  git-commit.instructions.md  svelte-component-design.instructions.md  svelte-component-syntax.instructions.md  svelte.instructions.md  tailwind-css-styling.instructions.md  test-site.instructions.md
.github/prompts/: fix-errors.prompt.md  logging.prompt.md  svelte-state-management.prompt.md  svelte-webapp.prompt.md  tailwind-shadcn-integration.prompt.md  test-unit.prompt.md  ui-designer.md
.github/workflows/: ci.yml
.roo/commands/: uiux.md
backend/: .dockerignore  .gitignore  =0.4.27  =0.5.0  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  TODO.md  mkdocs.yml  pyproject.toml  uvicorn.ini
backend/.devcontainer/: devcontainer.json
backend/app/: main.py
backend/app/api/: __init__.py  routes_assets.py  routes_screens.py  websocket.py
backend/app/core/: config.py  errors.py  logging_config.py
backend/app/models/: asset_models.py  screen_models.py
backend/app/scripts/: __init__.py  clean.py  debug.py  format.py  start.py  test.py
backend/app/services/: media_service.py  screen_service.py
backend/app/state/: memory_state.py
backend/app/static/: swagger-docs.css
backend/app/util/: connection_manager.py
backend/docs/: index.md  modules.md
backend/src/web_buddy_backend/: main.py
backend/src/web_buddy_backend/api/: __init__.py  routes_assets.py  routes_screens.py  websocket.py
backend/src/web_buddy_backend/core/: config.py
backend/src/web_buddy_backend/models/: asset_models.py  screen_models.py
backend/src/web_buddy_backend/scripts/: build.py  clean.py  debug.py  doctor.py  lint.py  start.py  test.py
backend/src/web_buddy_backend/services/: media_service.py  screen_service.py
backend/src/web_buddy_backend/state/: memory_state.py
backend/src/web_buddy_backend/static/: swagger-docs.css  swagger-ui.css
backend/src/web_buddy_backend/util/: connection_manager.py
backend/tests/: conftest.py  test_cli_improvements.py  test_media_service.py  test_upload_api.py
docs/: Svelte-5-Documentation.md  daisyui.md
docs/diaper/: README.md
frontend/: .dockerignore  .env.development  .env.example  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  Dockerfile  LATEST_ERROR.md  README.md  TODO.md  TODO_Toolbar.md  Untitled-1.html  components.json  dev.ps1  dev.sh  eslint.config.js  index.html  jsrepo.json  package-lock.json  package.json  resources.md  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend/.claude/: settings.local.json
frontend/.cursor/rules/: svelte.instructions.md  svelte.modules.mdc  svelte.snippets.mdc  sveltekit.mdc  tailwindCSS.instruction.mdc
frontend/docs/: Svelte-5-Documentation.md  TailWindCSSv4.md  bun.md  svelte-konva-docs.md
frontend/docs/diaper/: README.md  header.svelte
frontend/docs/shadcn-svelte-extras/: README.md
frontend/konva-notes/: Konva_PLAN.md  animations.ts  assets.md  dragging  error-recovery.ts  keybind-manager.ts  next-level.md  snapping.md  spring-physics.ts  state-machine.ts  theme-tokens.ts  transforms.md  ux.md
frontend/scripts/: README.md  build-verify.mjs  ci-pipeline.mjs  dev-smart.mjs
frontend/src/: App.svelte  app.css  app.html  components.css  layout.md  responsive-layout.css  svelte-ambient.d.ts
frontend/src/lib/: api.ts  error-store.svelte.ts  stores.svelte.ts  stores.ts  ws.ts
frontend/src/lib/api/: .purpose.md  client.ts
frontend/src/lib/assets/: .purpose.md  logo.svelte
frontend/src/lib/components/: .purpose.md  Canvas.svelte  ErrorModal.svelte  ErrorPanel.svelte  ErrorPanel2.svelte  ErrorPanelComplete.svelte  Features.svelte  Grid.svelte  HashedBackground.svelte  KonvaGrid.svelte  ScreenFrame.svelte  SettingsPopup.svelte  Toolbar.svelte  settings-dialog.svelte
frontend/src/lib/components/assets/: ImageAsset.svelte  TextAsset.svelte
frontend/src/lib/config/: .purpose.md  menu.ts
frontend/src/lib/features/: .purpose.md
frontend/src/lib/hooks/: .purpose.md
frontend/src/lib/stores/: .purpose.md  error.ts  grid.ts  index.ts  settings.ts  tools.ts
frontend/src/lib/ui/: .purpose.md  index.ts
frontend/src/lib/utils/: .purpose.md
frontend/src/routes/: +error.svelte  +layout.svelte  +page.svelte  page.svelte.spec.ts
frontend/src/routes/about/: +page.svelte  page.svelte.spec.ts
frontend/src/routes/backup/: +page.svelte
frontend/src/routes/error/: +page.svelte
frontend/src/routes/konva/: +page.svelte
frontend/src/routes/sidebar-02/: +page.svelte
frontend/src/styles/: app.css  base.css  components.css  theme.css  utilities.css
(+57 files in other folders)
