[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web-buddy-backend"
version = "0.1.0"
requires-python = ">=3.12"
authors = [{ name = "Web Buddy Team", email = "example@email.com" }]
description = "Backend for Web Buddy application"
readme = "README.md"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "orjson>=3.10.0",
    "opencv-python>=4.8.0",
    "python-magic>=0.4.27",
]

[dependency-groups]
dev = ["pytest>=8.4.1", "pytest-sugar>=1.0.0", "ruff>=0.5.0", "build>=1.2.1"]

[project.scripts]
start = "app.scripts.start:main"
lint = "app.scripts.lint:main"
debug = "app.scripts.debug:main"
test = "app.scripts.test:main"
format = "app.scripts.format:main"
build = "app.scripts.build:main"
clean = "app.scripts.clean:main"

[tool.uvicorn]
factory = true
host = "0.0.0.0"
port = 8000
reload = false
